--- a/GitLottoApp/GitLottoApp/MainWindow.xaml
+++ b/GitLottoApp/GitLottoApp/MainWindow.xaml
@@ -5,34 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GitLottoApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Lotto number generator" Height="350" Width="525" MinHeight="350" MinWidth="525" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20*"/>
-            <RowDefinition Height="20*"/>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="20*"/>
+            <RowDefinition Height="15*"/>
+            <RowDefinition Height="15*"/>
+            <RowDefinition Height="60*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row="0">
-            <Label x:Name="lblHeader" Content="Lucky Lotto Number Generator" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"/>
-        </DockPanel>
-        <DockPanel Grid.Row="1">
-            <Label x:Name="lblChooseLotto" Content="Please Choose Lotto Type" Height="64" VerticalAlignment="Bottom"/>
-            <Button x:Name="btnIrish" Content="Irish" Width="100" HorizontalAlignment="Right" Click="btnIrish_Click"/>
-            <Button x:Name="btnEnglish" Content="English" Width="100" HorizontalAlignment="Right"/>
-        </DockPanel>
-        <DockPanel Grid.Row="2">
-            <StackPanel>
-                <StackPanel HorizontalAlignment="Center">
-                    
-                </StackPanel>
-                <StackPanel>
-                    
-                </StackPanel>
-            </StackPanel>
-            <Label x:Name="label" Content="Label" Height="128" VerticalAlignment="Top"/>
-            <Label x:Name="label1" Content="Label" Height="128" VerticalAlignment="Top"/>
+
+        <DockPanel Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="auto" Width="auto" Margin="0">
+            <Label x:Name="lblHeading" Content="Lucky Lotto number generator" HorizontalAlignment="Center"  VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
         </DockPanel>
 
+        <DockPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Height="auto" Width="auto" Margin="0">
+            <Label x:Name="lblChooseLotto" Content="Please choose lotto" HorizontalAlignment="Center" Margin="10" VerticalAlignment="Center" />
+            <Button x:Name="btnIrishLotto" Content="Irish" HorizontalAlignment="Right" Margin="10,0,10,0" VerticalAlignment="Center" Width="75" Click="btnIrishLotto_Click"/>
+            <Button x:Name="btnUKLotto" Content="UK" HorizontalAlignment="Right" Margin="10,0,10,0" VerticalAlignment="Center" Width="75" Click="btnUKLotto_Click"/>
+        </DockPanel>
+
+        <DockPanel Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="auto" Width="auto" Margin="0">
+            <Button x:Name="bgtnClose" Content="Close" HorizontalAlignment="Right" VerticalAlignment="Center" Width="75" Margin="10,0" Grid.Row="3" Click="bgtnClose_Click"/>
+        </DockPanel>
+
+        <DockPanel Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="auto" Width="auto" Margin="10">
+            <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="10" Height="auto">
+                <Label x:Name="lblRandomHeading" Content="Randomly selected numbers" HorizontalAlignment="Center"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="auto" VerticalAlignment="Stretch">
+                    <Label x:Name="lbl1" HorizontalAlignment="Stretch" Width="40" Margin="10,0,10,0" FontSize="16" Content="1" />
+                    <Label x:Name="lbl2" HorizontalAlignment="Stretch" Width="40" Margin="10,0,10,0" FontSize="16" Content="2"/>
+                    <Label x:Name="lbl3"  HorizontalAlignment="Stretch" Width="40" Margin="10,0,10,0"  FontSize="16" Content="3"/>
+                    <Label x:Name="lbl4"  HorizontalAlignment="Stretch" Width="40" Margin="10,0,10,0" FontSize="16" Content="4"/>
+                    <Label x:Name="lbl5"  HorizontalAlignment="Stretch" Width="40" Margin="10,0,10,0" FontSize="16" Content="5"/>
+                    <Label x:Name="lbl6"  HorizontalAlignment="Stretch" Width="40" Margin="10,0,10,0" FontSize="16" Content="6"/>
+                    <Label x:Name="lbl7"  HorizontalAlignment="Stretch" FontSize="16" Content="Bonus" Width="auto"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+                    <TextBox x:Name="tbxResult1" Margin="10" FontSize="16" Height="23" TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                    <TextBox x:Name="tbxResult2" Margin="10" FontSize="16" Height="23" TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                    <TextBox x:Name="tbxResult3" Margin="10" FontSize="16" Height="23" TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                    <TextBox x:Name="tbxResult4" Margin="10" FontSize="16" Height="23" TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                    <TextBox x:Name="tbxResult5" Margin="10" FontSize="16" Height="23" TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                    <TextBox x:Name="tbxResult6" Margin="10" FontSize="16" Height="23"  TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                    <TextBox x:Name="tbxResultBonus" Margin="10" FontSize="16" Height="23" TextWrapping="Wrap" Width="40" Grid.Row="2"/>
+                </StackPanel>
+            </StackPanel>
+        </DockPanel >
     </Grid>
 </Window>
